--- a/sources/interfacesystem/register.html
+++ b/sources/interfacesystem/register.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../css/style.css">
-    <title>Log ind</title>
+    <title>Registrer</title>
 </head>
 <body>
     <form>  
@@ -14,7 +14,7 @@
             <input type="text" placeholder="Indtast e-mail" name="e-mail" required>  <br><br>
             <label>Adgangskode: </label>   <br>
             <input type="password" placeholder="Indtast adgangskode" name="password" required>  <br><br>
-            <button type="submit">Log ind</button>   
+            <button type="button" onclick="window.location.href='login.html'" style="background-color: green;">Gå tilbage</button>   
             <button type="button" class="cancelbtn" onclick="window.location.href='register.html'"> Registrer bruger</button>   
         </div>   
     </form>     
